# pretty-sitter

./: .gitignore  README.md  pyproject.toml
pretty_sitter/: __init__.py  colorer.py  configs.py  pretty_sitter.py
tests/: test_pretty_sitter.py
